<resources>
  <string name="title_activity_main">MainActivity</string>
  <!-- Strings used for fragments for navigation -->
  <string name="first_fragment_label">First Fragment</string>
  <string name="second_fragment_label">Second Fragment</string>
  <string name="next">Next</string>
  <string name="previous">Previous</string>

  <string name="hello_first_fragment">Hello first fragment</string>
  <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
  <string name="add_account">Add Account</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="name_hint">Name</string>
  <string name="type_hint">Type of Account</string>
  <string name="cancel_label">Cancel</string>
  <string name="title_activity_settings">SettingsActivity</string>


  <string name="attachment_summary_off">Only download attachments when manually requested</string>
  <string name="login_failure_message">Unable to Sign-In with Provided Credentials</string>
  <string name="sign_out">Sign Out</string>
  <string name="action_settings">Settings</string>
  <string name="account">Account</string>
  <string name="menu_transaction">Transactions</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_account">Account</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_desc">Navigation Header</string>
  <string name="total_budget_amount">Total Budget Amount: $0</string>
  <string name="zero_dollars">$0</string>
  <string name="budget">Budget</string>
  <string name="today">Today</string>
  <string name="week">Week</string>
  <string name="month">Month</string>
  <string name="savings">Savings</string>
  <string name="my_budget">My Budget</string>
  <string name="analytics">Analytics</string>
  <string name="history">History</string>
  <string name="enter_amount">Enter Amount...</string>
  <string name="enter_note">Enter Note...</string>
  <string name="cancel">Cancel</string>
  <string name="save">Save</string>
  <string name="spending_category_prompt">Select a Spending Category</string>
  <string name="item_name">Item Name</string>
  <string name="note">Note</string>
  <string name="date">Date</string>
  <string name="my_account">My Account</string>
  <string name="total_account_amount">Please Enter an Amount : $0</string>
  <string name="new_expense_description">Add a New Expense</string>
  <string name="new_expense_title">New Expense</string>
  <string name="save_label">Save</string>

  <string-array name="categories">
    <item>Transportation</item>
    <item>Food</item>
    <item>Rent/Utilities</item>
    <item>Entertainment</item>
    <item>Education</item>
    <item>Charity</item>
    <item>Apparel</item>
    <item>Health</item>
    <item>Personal</item>
    <item>Other</item>


  </string-array>

</resources>