<?xml version="1.0" encoding="utf-8"?>

<navigation

  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/mobile_navigation"
  app:startDestination="@+id/nav_home">


  <action
    android:id="@+id/open_settings"
    app:destination="@id/nav_settings"/>


  <fragment
    android:id="@+id/nav_home"
    android:name="edu.cnm.deepdive.greentrax.controller.HomeFragment"
    android:label="@string/app_name">

    <action
      android:id="@+id/open_budget"
      app:destination="@id/nav_budget"/>

  </fragment>


  <fragment
    android:id="@+id/nav_budget"
    android:name="edu.cnm.deepdive.greentrax.controller.BudgetFragment"
    android:label="@string/budget">

    <action
      android:id="@+id/open_new_expense"
      app:destination="@id/nav_new_expense"/>

  </fragment>

  <fragment
    android:id="@+id/nav_account"
    android:label="@string/account"
    android:name="edu.cnm.deepdive.greentrax.controller.AccountFragment"/>

  <fragment
    android:id="@+id/nav_transaction"
    android:label="@string/menu_transaction"
    android:name="edu.cnm.deepdive.greentrax.controller.TransactionFragment"/>

  <fragment
    android:id="@+id/nav_settings"
    android:label="@string/menu_settings"
    android:name="edu.cnm.deepdive.greentrax.controller.SettingsFragment"/>

  <dialog
    android:id="@+id/nav_new_expense"
    android:name="edu.cnm.deepdive.greentrax.controller.NewExpenseFragment"/>
</navigation>