<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:orientation="vertical"
  android:elevation="10dp"
  app:cardElevation="10dp">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
      android:id="@+id/liner_layout"
      android:layout_width="250dp"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        android:id="@+id/item1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"/>

      <TextView
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zero_dollars"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"/>

      <TextView
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"/>

      <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"/>



    </LinearLayout>



  </RelativeLayout>

</androidx.cardview.widget.CardView>