<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:elevation="10dp"
  app:cardElevation="10dp"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"/>

  <TextView
    android:id="@+id/select_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/select_budget_item"
    android:gravity="center"
    android:textColor="@color/black"
    android:textSize="18sp"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <Spinner
      android:id="@+id/item_spinner"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:entries="@array/items"
      android:layout_gravity="center"
      android:background="@color/black">
      
    </Spinner>
    
    <EditText
      android:id="@+id/amount"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/enter_amount"
      android:inputType="number"
      android:textColor="@color/black"
      android:textColorHint="@color/black"/>

    <EditText
      android:visibility="gone"
      android:id="@+id/note"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/enter_note"
      android:textColor="@color/black"
      android:textColorHint="@color/black"/>


  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="horizontal">
    <RelativeLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1">
      <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="2dp"/>

    </RelativeLayout>



    <RelativeLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1">
      <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="2dp"/>

    </RelativeLayout>





  </LinearLayout>

</androidx.cardview.widget.CardView>