<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".controller.AccountFragment">

<RelativeLayout
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/ic_background"
  tools:context=".controller.MainActivity">

  <androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#000"
    android:elevation="4dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

  <TableLayout
    android:id="@+id/table"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="10dp"
    android:layout_below="@id/toolbar">


    <TableRow>

      <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/budget"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/ic_borders"
        android:padding="5dp"
        android:textSize="12sp"/>

      <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/today"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/ic_borders"
        android:padding="5dp"
        android:textSize="12sp"/>

      <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/week"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/ic_borders"
        android:padding="5dp"
        android:textSize="12sp"/>
      <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/month"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/ic_borders"
        android:padding="5dp"
        android:textSize="12sp"/>

      <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/savings"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/ic_borders"
        android:padding="5dp"
        android:textSize="12sp"/>

    </TableRow>

    <TableRow>

      <TextView
        android:id="@+id/budget_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/zero_dollars"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/ic_borders"
        android:padding="5dp"
        android:textSize="12sp"/>

      <TextView
        android:id="@+id/today_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/zero_dollars"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/ic_borders"
        android:padding="5dp"
        android:textSize="12sp"/>

      <TextView
        android:id="@+id/week_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/zero_dollars"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/ic_borders"
        android:padding="5dp"
        android:textSize="12sp"/>

      <TextView
        android:id="@+id/month_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/zero_dollars"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/ic_borders"
        android:padding="5dp"
        android:textSize="12sp"/>

      <TextView
        android:id="@+id/savings_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/zero_dollars"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/ic_borders"
        android:padding="5dp"
        android:textSize="12sp"/>

    </TableRow>


  </TableLayout>

  <androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/table">

    <GridLayout
      android:id="@+id/grid_layout"
      android:rowCount="3"
      android:columnCount="2"
      android:layout_marginBottom="@dimen/table_spacing"
      android:layout_marginLeft="@dimen/table_spacing"
      android:layout_marginRight="@dimen/table_spacing"
      android:layout_marginTop="10dp"
      android:layout_width="match_parent"
      android:layout_height="match_parent">


      <!--Budget-->
      <androidx.cardview.widget.CardView
        android:id="@+id/budget_card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="fill"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="0dp"
        android:background="@color/white">

        <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:gravity="center"
          android:layout_gravity="center_vertical|center_horizontal">

          <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_budget"/>

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_budget"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center">

          </TextView>

        </LinearLayout>


      </androidx.cardview.widget.CardView>
      <!--Today-->
      <androidx.cardview.widget.CardView
        android:id="@+id/today_card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="fill"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="0dp"
        android:background="#fff">

        <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:gravity="center"
          android:layout_gravity="center_vertical|center_horizontal">

          <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_today"/>

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center">

          </TextView>

        </LinearLayout>


      </androidx.cardview.widget.CardView>
      <!--Week-->
      <androidx.cardview.widget.CardView
        android:id="@+id/week_card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="fill"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="0dp"
        android:background="#fff">

        <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:gravity="center"
          android:layout_gravity="center_vertical|center_horizontal">

          <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_week"/>

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/week"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center">

          </TextView>

        </LinearLayout>


      </androidx.cardview.widget.CardView>
      <!--Month-->
      <androidx.cardview.widget.CardView
        android:id="@+id/month_card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="fill"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="0dp"
        android:background="#fff">

        <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:gravity="center"
          android:layout_gravity="center_vertical|center_horizontal">

          <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_month"/>

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center">

          </TextView>

        </LinearLayout>


      </androidx.cardview.widget.CardView>
      <!--Analytics-->
      <androidx.cardview.widget.CardView
        android:id="@+id/analytics_card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="fill"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="0dp"
        android:background="#fff">

        <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:gravity="center"
          android:layout_gravity="center_vertical|center_horizontal">

          <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_analytics"/>

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/analytics"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center">

          </TextView>

        </LinearLayout>


      </androidx.cardview.widget.CardView>
      <!--History-->
      <androidx.cardview.widget.CardView
        android:id="@+id/history_card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="fill"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="0dp"
        android:background="#fff">

        <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:gravity="center"
          android:layout_gravity="center_vertical|center_horizontal">

          <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_history"/>

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center">

          </TextView>

        </LinearLayout>


      </androidx.cardview.widget.CardView>

    </GridLayout>

    <!--Floating action button-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/fab"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom|end"
      app:fabSize="normal"
      android:backgroundTint="@color/white"
      android:src="@drawable/ic_add"
      android:layout_margin="16dp"
      android:contentDescription="TODO"/>



  </androidx.coordinatorlayout.widget.CoordinatorLayout>


</RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>